--- a/Alexe1kaGitHubSearcher/app/src/main/res/values/strings.xml
+++ b/Alexe1kaGitHubSearcher/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Alexe1kaGitHubSearcher</string>
     <string name="action_settings">Settings</string>
+    <string name="please_insert">Please insert keywords for searching repository on GitHub</string>
+    <string name="input_description">keywords</string>
+    <string name="search_button_description">Search</string>
 </resources>
